--- a/domainAdaption.tex
+++ b/domainAdaption.tex
@@ -40,7 +40,7 @@ where $\Phi_{\theta}^T(x)$ represents $x$ from $\mathcal{D}^T$ in higher dimensi
    K(x_i, x_j)   & \text{otherwise} 
   \end{cases}
 \]
-\noindent Based on equations (30) and (31), considering the kernel as a measure of ``similarity'', samples from the same domain are twice as similar as those come from different domains. In order words, for a test sample, those training samples from the same domain  are going to be more influential. Furthermore, the implementation is rather easy since the only operation needed is to twice the kernels of samples from the same domain. 
+\noindent Based on equations (31) and (32), considering the kernel as a measure of ``similarity'', samples from the same domain are twice as similar as those come from different domains. In order words, for a test sample, those training samples from the same domain  are going to be more influential. Furthermore, the implementation is rather easy since the only operation needed is to twice the kernels of samples from the same domain. 
 
 \subsection{Adaptive Support Vector Machine (A-SVM)}
 Adaptive SVM \cite{yang2007cross} incorporates multiple auxiliary classifiers $f_1^A(x), \cdots, f_M^A(x)$ built from $\mathcal{D}^A$ into the standard structure of SVM. The decision function of adapted classifier is defined as
@@ -69,7 +69,7 @@ It has been emphasized that the distributions of $\mathcal{D}^T$ and $\mathcal{D
 DIST_k(\mathcal{D}^A, \mathcal{D}^T) = \norm{\frac{1}{n_A} \sum_{i=1}^{n_A} \varphi(x_i^A) - \frac{1}{n_T} \sum_{i=1}^{n_T} \varphi{x_i^T}}
 \end{equation}
 where $x_i^A$ and $x_i^T$ are samples from the auxiliary and target domains, respectively, and $\varphi(x)$ is a mapping function which projects $x$ into higher dimensional space. Given this mapping function, the kernel between $x_i$
- and $x_j$ is $k(x_i, x_j) = \varphi (x_i)^T \cdot \varphi (x_j)$. To simplify equation (36), a column vector $\mathbf{s}$, in which the first $n_A$ entries are $\frac{1}{n_A}$ while the remaining $n_T$ entries are $-\frac{1}{n_T}$. Now the square of MMD in equation (36) is simplified as 
+ and $x_j$ is $k(x_i, x_j) = \varphi (x_i)^T \cdot \varphi (x_j)$. To simplify equation (37), a column vector $\mathbf{s}$, in which the first $n_A$ entries are $\frac{1}{n_A}$ while the remaining $n_T$ entries are $-\frac{1}{n_T}$, is used. Now the square of MMD in equation (37) is simplified as 
 \begin{equation}
 DIST_k^2(\mathcal{D}^A, \mathcal{D}^T) = \text{tr}(\mathbf{KS})
 \end{equation}
@@ -83,7 +83,7 @@ where $d_m$ is the coefficient of $k_m$ with constraints $d_m \geq 0$ and $\sum_
 \begin{equation}
 f^T(x) = \sum_{m=1}^{M} d_m w_m^T \varphi_m(x) + b 
 \end{equation}
-where $f^T(x)$ is the permutation function built by $\mathcal{D}_l^T$ based on base kernels with $b$ as the bias term. As a result, once the optimal coefficients $\mathbf{d}=[d_1, \cdots, d_M]^T$ are found through the process of reducing mismatches between $\mathcal{D}^T$ and $\mathcal{D}^A$, this decision function will be easily defined. After incorporating equation (38) into (37), the square of MMD is defined as a function of $\mathbf{d}$.
+where $f^T(x)$ is the permutation function built by $\mathcal{D}_l^T$ based on base kernels with $b$ as the bias term. As a result, once the optimal coefficients $\mathbf{d}=[d_1, \cdots, d_M]^T$ are found through the process of reducing mismatches between $\mathcal{D}^T$ and $\mathcal{D}^A$, this decision function will be easily defined. After incorporating equation (39) into (38), the square of MMD is defined as a function of $\mathbf{d}$.
 \begin{equation}
 DIST_k^2(\mathcal{D}^A, \mathcal{D}^T) = \Omega(\mathbf{d}) = \mathbf{h^T d}
 \end{equation}
@@ -98,7 +98,7 @@ where $\theta$ is is a tradeoff parameter which balances the mismatch of distrib
 To solve the optimization problem, the author \cite{duan2009domain} employed the reduced gradient descent procedure to iteratively update coefficients $\mathbf{d}$ and dual variable $\boldsymbol{\alpha}$. There are two steps:
 \begin{enumerate}
 	\item{\bf Update the dual variable $\boldsymbol{\alpha}$} \\
-	Given the current value $\mathbf{d}$, the optimization problem in equation (42) are  solved by LIBSVM \cite{CC01a}, and the dual variable $\boldsymbol{\alpha}$ is updated.
+	Given the current value $\mathbf{d}$, the optimization problem in equation (43) are  solved by LIBSVM \cite{CC01a}, and the dual variable $\boldsymbol{\alpha}$ is updated.
 
 	\item{\bf Update the linear combination coefficients $\mathbf{d}$}\\
 	At $ t+1 $ iteration, $d_{t+1}$ is updated as
@@ -116,7 +116,7 @@ Inspired by adaptive SVM (A-SVM) \cite{yang2007cross} and domain transfer SVM (D
 \begin{equation}
 f^T(x) = \sum_{p=1}^{P} \beta_p f_p(x) + \sum_{m=1}^{M} d_m w_m^T \varphi_m(x) + b 
 \end{equation}
-Compared with equation (39), the added item $\sum_{p=1}^{P} \beta_p f_p(x)$, where $f_1(x), \cdots, f_P(x)$ are pre-learnt classifiers with $\beta$ being the weight of each classifier, represents the influence from pre-learnt classifiers. Because of the influence coming from pre-learnt classifiers, compared with DTSVM, the difference is that equation (42) becomes
+Compared with equation (40), the added item $\sum_{p=1}^{P} \beta_p f_p(x)$, where $f_1(x), \cdots, f_P(x)$ are pre-learnt classifiers with $\beta$ being the weight of each classifier, represents the influence from pre-learnt classifiers. Because of the influence coming from pre-learnt classifiers, compared with DTSVM, the difference is that equation (43) becomes
 \begin{equation}
 J(\mathbf{d}) = \underset{\boldsymbol{\alpha}}{\max} \; \sum_i \alpha_i - \frac{1}{2} \sum_{i,j} y_i y_j \alpha_i \alpha_j  (\sum_{m=1}^M d_m \; \breve{\varphi_m} (x_i) ^T \breve{\varphi_m} (x_j))           
 \end{equation}
