correct formula of aligned spatial pyramid matching

--- a/videoRec.tex
+++ b/videoRec.tex
@@ -174,8 +174,8 @@ As introduced in the section of image recognition, recognition tasks could be si
 	\begin{eqnarray}
 	& \hat F_{ij} = \argmin{F_{ij}} \sum_{i = 1}^{R} \sum_{j=1}^{R} F_{ij} D_{ij}
 	\nonumber \\
-	\text{subject to} & \sum_{i=1}^{R} F_{ij} = 1, \quad \forall i \nonumber\\
-	&\sum_{j=1}^{R} F_{ij} = 1, \quad \forall j
+	\text{subject to} & \sum_{i=1}^{R} F_{ij} = 1, \quad \forall j \nonumber\\
+	&\sum_{j=1}^{R} F_{ij} = 1, \quad \forall i
 	\end{eqnarray}
 
 	\noindent Finally, the aligned distance $D_l(P,Q)$ between $P$ and $Q$ at level $l$ can be directly calculated as below
